@@ -1,8 +1,5 @@
 /*
- * Original Author -> Harry Yang (taketoday@foxmail.com) https://taketoday.cn
- * Copyright © Harry Yang & 2017 - 2023 All Rights Reserved.
- *
- * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER
+ * Copyright 2017 - 2023 the original author or authors.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -61,13 +58,14 @@ import cn.taketoday.core.test.tools.CompileWithForkedClassLoader;
 import cn.taketoday.core.test.tools.Compiled;
 import cn.taketoday.core.test.tools.SourceFile;
 import cn.taketoday.core.test.tools.TestCompiler;
+import cn.taketoday.javapoet.ClassName;
 import cn.taketoday.javapoet.CodeBlock;
 import cn.taketoday.javapoet.MethodSpec;
 import cn.taketoday.javapoet.ParameterizedTypeName;
 import cn.taketoday.util.ReflectionUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
 
 /**
  * Tests for {@link BeanDefinitionMethodGenerator} and
@@ -169,23 +167,6 @@ class BeanDefinitionMethodGeneratorTests {
       assertThat(sourceFile).contains("Get the bean definition for 'testBean'");
       assertThat(sourceFile).contains("new RootBeanDefinition(\"cn.taketoday.beans.factory.aot.PackagePrivateTestBean\"");
       assertThat(sourceFile).contains("setTargetType(TestBean.class)");
-      assertThat(sourceFile).contains("setInstanceSupplier(TestBean::new)");
-      assertThat(actual).isInstanceOf(RootBeanDefinition.class);
-    });
-  }
-
-  @Test
-    // gh-29556
-  void generateBeanDefinitionMethodGeneratesMethodWithInstanceSupplier() {
-    RegisteredBean registeredBean = registerBean(new RootBeanDefinition(TestBean.class, TestBean::new));
-    BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(
-            this.methodGeneratorFactory, registeredBean, null,
-            List.of((generationContext, beanRegistrationCode) -> { }));
-    MethodReference method = generator.generateBeanDefinitionMethod(
-            this.generationContext, this.beanRegistrationsCode);
-    compile(method, (actual, compiled) -> {
-      SourceFile sourceFile = compiled.getSourceFile(".*BeanDefinitions");
-      assertThat(sourceFile).contains("Get the bean definition for 'testBean'");
       assertThat(sourceFile).contains("setInstanceSupplier(TestBean::new)");
       assertThat(actual).isInstanceOf(RootBeanDefinition.class);
     });
@@ -468,6 +449,7 @@ class BeanDefinitionMethodGeneratorTests {
     });
   }
 
+  @SuppressWarnings("unchecked")
   @Test
   void generateBeanDefinitionMethodWhenHasListOfInnerBeansPropertyValueGeneratesMethod() {
     RootBeanDefinition firstInnerBeanDefinition = (RootBeanDefinition) BeanDefinitionBuilder
@@ -595,12 +577,80 @@ class BeanDefinitionMethodGeneratorTests {
   }
 
   @Test
-    // gh-29556
-  void throwExceptionWithInstanceSupplierWithoutAotContribution() {
+  void generateBeanDefinitionMethodWhenInstanceSupplierWithNoCustomization() {
     RegisteredBean registeredBean = registerBean(new RootBeanDefinition(TestBean.class, TestBean::new));
-    assertThatIllegalArgumentException().isThrownBy(() -> new BeanDefinitionMethodGenerator(
+    BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(
+            this.methodGeneratorFactory, registeredBean, null, List.of());
+    assertThatIllegalStateException().isThrownBy(() -> generator.generateBeanDefinitionMethod(
+            this.generationContext, this.beanRegistrationsCode)).withMessageStartingWith(
+            "Default code generation is not supported for bean definitions declaring an instance supplier callback");
+  }
+
+  @Test
+  void generateBeanDefinitionMethodWhenInstanceSupplierWithOnlyCustomTarget() {
+    BeanRegistrationAotContribution aotContribution = BeanRegistrationAotContribution.withCustomCodeFragments(
+            defaultCodeFragments -> new BeanRegistrationCodeFragmentsDecorator(defaultCodeFragments) {
+              @Override
+              public ClassName getTarget(RegisteredBean registeredBean) {
+                return ClassName.get(TestBean.class);
+              }
+            });
+    RegisteredBean registeredBean = registerBean(new RootBeanDefinition(TestBean.class, TestBean::new));
+    BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(
             this.methodGeneratorFactory, registeredBean, null,
-            Collections.emptyList()));
+            List.of(aotContribution));
+    assertThatIllegalStateException().isThrownBy(() -> generator.generateBeanDefinitionMethod(
+            this.generationContext, this.beanRegistrationsCode)).withMessageStartingWith(
+            "Default code generation is not supported for bean definitions declaring an instance supplier callback");
+  }
+
+  @Test
+  void generateBeanDefinitionMethodWhenInstanceSupplierWithOnlyCustomInstanceSupplier() {
+    BeanRegistrationAotContribution aotContribution = BeanRegistrationAotContribution.withCustomCodeFragments(
+            defaultCodeFragments -> new BeanRegistrationCodeFragmentsDecorator(defaultCodeFragments) {
+              @Override
+              public CodeBlock generateInstanceSupplierCode(GenerationContext generationContext,
+                      BeanRegistrationCode beanRegistrationCode, boolean allowDirectSupplierShortcut) {
+                return CodeBlock.of("// custom");
+              }
+            });
+    RegisteredBean registeredBean = registerBean(new RootBeanDefinition(TestBean.class, TestBean::new));
+    BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(
+            this.methodGeneratorFactory, registeredBean, null,
+            List.of(aotContribution));
+    assertThatIllegalStateException().isThrownBy(() -> generator.generateBeanDefinitionMethod(
+            this.generationContext, this.beanRegistrationsCode)).withMessageStartingWith(
+            "Default code generation is not supported for bean definitions declaring an instance supplier callback");
+  }
+
+  @Test
+  void generateBeanDefinitionMethodWhenInstanceSupplierWithCustomInstanceSupplierAndCustomTarget() {
+    BeanRegistrationAotContribution aotContribution = BeanRegistrationAotContribution.withCustomCodeFragments(
+            defaultCodeFragments -> new BeanRegistrationCodeFragmentsDecorator(defaultCodeFragments) {
+
+              @Override
+              public ClassName getTarget(RegisteredBean registeredBean) {
+                return ClassName.get(TestBean.class);
+              }
+
+              @Override
+              public CodeBlock generateInstanceSupplierCode(GenerationContext generationContext,
+                      BeanRegistrationCode beanRegistrationCode, boolean allowDirectSupplierShortcut) {
+                return CodeBlock.of("$T::new", TestBean.class);
+              }
+            });
+    RegisteredBean registeredBean = registerBean(new RootBeanDefinition(TestBean.class, TestBean::new));
+    BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(
+            this.methodGeneratorFactory, registeredBean, null,
+            List.of(aotContribution));
+    MethodReference method = generator.generateBeanDefinitionMethod(
+            this.generationContext, this.beanRegistrationsCode);
+    compile(method, (actual, compiled) -> {
+      SourceFile sourceFile = compiled.getSourceFile(".*BeanDefinitions");
+      assertThat(sourceFile).contains("Get the bean definition for 'testBean'");
+      assertThat(sourceFile).contains("setInstanceSupplier(TestBean::new)");
+      assertThat(actual).isInstanceOf(RootBeanDefinition.class);
+    });
   }
 
   private void testBeanDefinitionMethodInCurrentFile(Class<?> targetType, RootBeanDefinition beanDefinition) {
